# Genos

./: .gitignore  GenOS_Telegram_Integration.md  README.md  package-lock.json
backend/: graph.py  main.py  pyproject.toml  requirements.txt
backend/Agents/: shell_agent.py
backend/Brain/: llm.py
backend/Retrieval/: RAG.py
backend/Tools/: all_tools.py  file_tools.py  network_tools.py  os_tools.py  process_tools.py  shell_tools.py
backend/agents/: criticagent.py  shellagent.py
backend/brain/: llm.py
backend/connectors/: chroma_connector.py  ssh_connector.py
backend/core/: access.py  auth.py  chat_memory.py  db.py  notifications.py  serverutils.py  session_manager.py  sshconnector.py  teams.py  userutils.py
backend/handlers/: telegram_handler.py
backend/routes/: auth.py
backend/routes/agents/: agents.py
backend/routes/notifications/: notifications.py
backend/routes/server/: servers.py
backend/routes/teams/: teams.py
backend/routes/telegram/: __init__.py  telegram.py
backend/routes/user/: user.py
backend/schema/: __init__.py  agents.py  metrics.py  notifications.py  servers.py  session.py  teams.py  user.py
backend/services/: key_gen.py  poller.py  rag_service.py  telegram_service.py  vault.py
backend/tools/: all_tools.py  file_tool.py  network_tool.py  os_tool.py  process_tool.py
backend/utils/: config.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/auth/: AuthPage.jsx
frontend/src/components/backgrounds/: Beams.jsx  CursorGlow.jsx
frontend/src/components/chat/: ChatPage.jsx
frontend/src/components/common/: BorderGlow.css  BorderGlow.jsx  CtaButton.jsx  StarBorder.css  StarBorder.jsx
frontend/src/components/connections/: CreateConnectionPage.jsx
frontend/src/components/dashboard/: DashboardPage.jsx  ServerMetricsBadge.jsx
frontend/src/components/layout/: Navbar.jsx  Section.jsx
frontend/src/components/notifications/: NotificationBell.jsx  NotificationItem.jsx
frontend/src/components/profile/: ProfilePage.css  ProfilePage.jsx
frontend/src/components/server/: MetricCard.jsx  ServerDashboardPage.css  ServerDashboardPage.jsx  VitalsChart.jsx
frontend/src/components/teams/: InviteMemberModal.jsx  MemberRow.jsx  TeamDetailPage.jsx  TeamsPage.jsx
frontend/src/components/text/: GradientText.css  GradientText.jsx
frontend/src/lib/: authApi.js  metricsApi.js  notificationsApi.js  serverApi.js  teamsApi.js  telegramApi.js
