[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "bcrypt==5.0.0",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "colorama==0.4.6",
    "cryptography==46.0.7",
    "dnspython==2.8.0",
    "ecdsa==0.19.2",
    "email-validator==2.3.0",
    "fastapi==0.136.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.13",
    "invoke==3.0.3",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "langchain==1.2.15",
    "langchain-core==1.3.1",
    "langgraph==1.1.9",
    "langgraph-checkpoint==4.0.2",
    "langgraph-prebuilt==1.0.10",
    "langgraph-sdk==0.3.13",
    "langsmith==0.7.35",
    "motor==3.7.1",
    "orjson==3.11.8",
    "ormsgpack==1.12.2",
    "packaging==26.1",
    "paramiko==4.0.0",
    "passlib[bcrypt]==1.7.4",
    "pyasn1==0.6.3",
    "pycparser==3.0",
    "pydantic-core==2.46.3",
    "pydantic[email]==2.13.3",
    "pyjokes>=0.8.3",
    "pymongo==4.17.0",
    "pynacl==1.6.2",
    "python-dotenv==1.2.2",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.26",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "starlette==1.0.0",
    "tenacity==9.1.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uvicorn==0.46.0",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]
